--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -326,8 +326,9 @@
         </div>
     </div>
 
+
     <!-- 凱茂理念 -->
-    <div class="container-fluid" style="background-color: #f3f3f3;">
+    <div class="container-fluid" style="background-color: #ffffff;">
         <div class="container mt-5 aboutContent">
             <div class="row">
                 <div class="col-lg-6">
@@ -436,7 +437,7 @@
 
 
     <!-- 里程碑 -->
-    <div class="milestone">
+    <div class="milestone pt-5">
         <h2 class="indexh2 text-center">里程碑</h2>
 
         <div class="timeline mt-5">
@@ -445,54 +446,54 @@
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <!-- <img src="./HP_image/timeline/c01.png"> -->
+                    <img src="../img/logo/color-whitebg.jpg">
                     <h2 class='indexh2'>2009年</h2>
-                    <p class="indexp">凱茂資訊股份有限公司成立。</p>
+                    <p class="indexptimeline">凱茂資訊股份有限公司成立。</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <!-- <img src="./HP_image/timeline/c02.png"> -->
+                    <img src="../img/aboutUs/laptop.jpg">
                     <h2 class='indexh2'>2010年</h2>
-                    <p class="indexp">成為華碩卓越黃金經銷夥伴。</p>
+                    <p class="indexptimeline">成為華碩卓越黃金經銷夥伴。</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <!-- <img src="./HP_image/timeline/c03.png"> -->
+                    <img src="../img/aboutUs/laptop.jpg">
                     <h2 class='indexh2'>2013年</h2>
-                    <p class="indexp">成為Microsoft Gold Partner Network微軟金級合作伙伴。</p>
+                    <p class="indexptimeline">成為Microsoft Gold Partner Network微軟金級合作伙伴。</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <!-- <img src="./HP_image/timeline/c04.png"> -->
+                    <img src="../img/aboutUs/laptop.jpg">
                     <h2 class='indexh2'>2014年</h2>
-                    <p class="indexp">成為Intel Technology Provider Gold Partner。</p>
+                    <p class="indexptimeline">成為Intel Technology Provider Gold Partner。</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <!-- <img src="./HP_image/timeline/c05.png"> -->
+                    <img src="../img/aboutUs/skyscraper.jpg">
                     <h2 class='indexh2'>2019年</h2>
-                    <p class="indexp">購置台中辦公室(現址)。</p>
+                    <p class="indexptimeline">購置台中辦公室(現址)。</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <!-- <img src="./HP_image/timeline/c06.png"> -->
+                    <img src="../img/aboutUs/growth.png">
                     <h2 class='indexh2'>2021年</h2>
-                    <p class="indexp">營業額連續三年成長20%。 </p>
+                    <p class="indexptimeline">營業額連續三年成長20%。 </p>
                 </div>
             </div>
 
