--- a/html/news.html
+++ b/html/news.html
@@ -55,8 +55,8 @@
                 </button>
                 <!-- 輪播內容 -->
                 <div class="carousel-inner px-10 txtIn">
-                    <div class="carousel-item active ">
-                        <div class="row">
+                    <div class="carousel-item active border rounded">
+                        <div class="row border">
                             <img src="../資訊圖庫/A11.jpg" class="w-100 h-auto col-xl-6" alt="最新消息1">
                             <div class="col-xl-6">
                                 <h3 class="indexh3">企業遭網路攻擊次數狂增！如何打造最強資安之盾？</h3>
@@ -69,7 +69,7 @@
 
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item border ">
                         <div class="row">
                             <img src="../資訊圖庫/A22.jpg" class="w-100 h-auto col-xl-6" alt="最新消息2">
                             <div class="col-xl-6">
@@ -160,7 +160,7 @@
                     <img class="card-img" src="../資訊圖庫/A22.jpg" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">軟體銷售服務</h3>
-                        <p class="card-text indexp2 txtIn">
+                        <p class="card-text indexp3 txtIn">
                             微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬軟體、開發工具、備份備援、郵件伺服器及其他等規劃與採購服務。
                         </p>
                     </div>
@@ -169,7 +169,7 @@
                     <img class="card-img" src="../資訊圖庫/A10.jpg" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">雲端銷售服務</h3>
-                        <p class="card-text indexp2 txtIn">
+                        <p class="card-text indexp3 txtIn">
                             凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練。</p>
                     </div>
                 </div>
@@ -177,28 +177,28 @@
                     <img class="card-img" src="../資訊圖庫/A01.jpg" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">系統整合服務</h3>
-                        <p class="card-text indexp2 txtIn">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
+                        <p class="card-text indexp3 txtIn">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class=" card-img" src="../資訊圖庫/A24.jpg" alt="4">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">網路規劃服務</h3>
-                        <p class="card-text indexp2 txtIn">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
+                        <p class="card-text indexp3 txtIn">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class="card-img" src="../資訊圖庫/A11.jpg" alt="5">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">資訊安全服務</h3>
-                        <p class="card-text indexp2 txtIn">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
+                        <p class="card-text indexp3 txtIn">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class="card-img" src="../資訊圖庫/A21.jpg" alt="6">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">技術維護服務</h3>
-                        <p class="card-text indexp2 txtIn">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
+                        <p class="card-text indexp3 txtIn">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
                     </div>
                 </div>
 
@@ -213,13 +213,13 @@
                     凱茂業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
-            <div class="row vh-50 mt-5">
-                <div class="col-xl-6 card">
+            <div class="row mt-5">
+                <div class="col-xl-6 card newsCard">
                     <div class="center2">
                         <img class="card-img w-100 h-auto" src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="1">
                     </div>
 
-                    <div class="card-img-overlay mx-3">
+                    <div class="card-img-overlay mx-3 p-5">
                         <a href="#">
                             <h2 class="card-title indexh2">華碩ASUS</h2>
                             <p class="card-text indexp txtIn">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -229,12 +229,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-6 card ">
+                <div class="col-xl-6 card newsCard">
                     <div class="center2">
                         <img class="card-img w-100 h-auto txtIn" src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="換圖">
                     </div>
 
-                    <div class="card-img-overlay mx-3">
+                    <div class="card-img-overlay mx-3 p-5">
                         <a href="#">
                             <h2 class="card-title indexh2">戴爾DELL</h2>
                             <p class="card-text indexp">Doloribus
@@ -272,8 +272,8 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 rec300 border">
-                                    <div class="align-items-center">
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
                                         <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖"/>
                                     </div>
                                 </div>
@@ -289,7 +289,7 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 rec300 border">
+                                <div class="col-xl-6 rec300">
                                     <div class="center">
                                         <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="補圖" />
                                     </div>
