--- a/html/news.html
+++ b/html/news.html
@@ -59,10 +59,13 @@
                 </button>
                 <!-- 輪播內容 -->
                 <div class="carousel-inner px-10 txtIn">
-                    <div class="carousel-item active border rounded">
-                        <div class="row border">
-                            <img src="../資訊圖庫/A11.jpg" class="w-100 h-auto col-xl-6" alt="最新消息1">
-                            <div class="col-xl-6">
+                    <div class="carousel-item active rounded">
+                        <div class="row border carouselCard">
+                            <div class = "carouselCardImage col-lg-6">
+                                <img src="../資訊圖庫/A11.jpg" alt="最新消息1">
+                            </div>
+                            
+                            <div class="col-lg-6 carouselCardContent">
                                 <h3 class="indexh3">企業遭網路攻擊次數狂增！如何打造最強資安之盾？</h3>
                                 <p class="indexp">
                                     數位轉型已然企業追求永續成長的必要策略，在全新的商業模式與工作型態中，網路所扮演的角色越來越吃重，企業對連網機制的高度依賴，也同時升高了駭客的攻擊慾望。
@@ -73,20 +76,24 @@
 
                         </div>
                     </div>
-                    <div class="carousel-item border ">
-                        <div class="row">
-                            <img src="../資訊圖庫/A22.jpg" class="w-100 h-auto col-xl-6" alt="最新消息2">
-                            <div class="col-xl-6">
-                                <h3 class="indexh3">微軟IE瀏覽器終止服務 全球2800萬人還在用。</h3>
-                                <p class="indexp">
-                                    微軟Internet
-                                    Explorer瀏覽器問世27年後，正式終止服務。根據研究機構EarthWeb統計的瀏覽器使用數據，目前IE仍有0.64%市占率，相當於全球2800萬人還在使用。
-                                    <br />微軟終止IE支援服務後，IE仍然可以在搭載較舊版本Windows作業系統的電腦上運行，不過一旦故障就無法修復。
-                                    <br />Windows 10和Windows 11用戶將無法再使用IE，但針對部分無法透過微軟新型瀏覽器Edge載入的內容，可能會提供IE模式進行瀏覽。
-                                    <br />EarthWeb數據顯示，Google
-                                    Chrome在全球瀏覽器市占率高達64.95%，第2名蘋果Safari市占19.01%，第3名微軟Edge市占3.99%。
-                                </p>
-                            </div>
+                    <div class="carousel-item border">
+                            <div class="container">
+                                <div class="col-lg-12">
+                                    <div class="carouselCard row">
+                                        <div class="carouselCardImage col-lg-6 border">
+                                            <img src="../資訊圖庫/A01.jpg">
+                                        </div>
+                                        <div class="carouselCardContent col-lg-6">
+                                            <h4>
+                                                Title Goes Here
+                                            </h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            <br>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                     <div class="carousel-item">
