--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <title>凱茂資訊 KAIMAU CORP.</title>
+    <link rel="stylesheet" href="../css/utilities.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/index-animation.css">
+    
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -36,30 +37,19 @@
         <label for="active" class="menu-btn"><span></span></label>
         <label for="active" class="close"></label>
         <div class="wrapper">
-            <!-- <ul>
-                <li><img src = "../img/logo/logo-white.png" style = "width:200px"></li>
-                <br>
-                <li><a href="#">回到首頁 Home</a></li>
-                <li><a href="#">關於凱茂 About</a></li>
-                <li><a href="#">服務項目 Services</a></li>
-                <li><a href="#">產品資訊 Product</a></li>
-                <li><a href="#">聯絡我們 Contact</a></li>
-            </ul> -->
             <div class="wapperContent">
                 <img src="../img/logo/only-logo.png" style="width:80px;position: absolute;position:0px 0px;">
 
                 <div class="wapperContentWord">
-                    <a href="#">HOME</a><br>
-                    <a href="#">ABOUT</a><br>
-                    <a href="#">NEWS</a><br>
-                    <a href="#">CONTACT</a>
+                    <a href="./index.html">HOME</a><br>
+                    <a href="./aboutus.html">ABOUT</a><br>
+                    <a href="./news.html">NEWS</a><br>
+                    <a href="./contact.html">CONTACT</a>
                 </div>
-
-
             </div>
-
-
         </div>
+
+
         <div><h2 class = "h2intro">Welcome To KAIMAU.</h2></div>
         <div class="indexanimate">
             <div class = "overlay"></div>
@@ -240,10 +230,10 @@
                 <div style="text-align:center; width:100% ;margin:auto;">
                     <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
                     <hr>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">HOME</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">ABOUT</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">NEWS</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">CONTACT</a>
+                    <a href="./index.html" class="m-2">HOME</a>
+                    <a href="./aboutus.html" class="m-2">ABOUT</a>
+                    <a href="./news.html" class="m-2">NEWS</a>
+                    <a href="./contact.html" class="m-2">CONTACT</a>
                     <br>
                     <br>
                     <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
@@ -257,6 +247,7 @@
     </body>
 
     <script src="../js/app.js"></script>
+    <script src="../js/navbar.js"></script>
 
     <script>AOS.init();</script>
 
