--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -17,6 +17,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/utilities.css">
 
+    <link rel="shortcut icon" href="../img/logo/favicon.ico"/>
+    <link rel="bookmark" href="../img/logo/favicon.ico"/>
+
 </head>
 
 <body>
