--- a/html/contact.html
+++ b/html/contact.html
@@ -23,6 +23,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
+    <link rel="shortcut icon" href="../img/logo/favicon.ico"/>
+    <link rel="bookmark" href="../img/logo/favicon.ico"/>
+
+
 </head>
 
 <body>
