--- a/html/news.html
+++ b/html/news.html
@@ -19,6 +19,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+    <link rel="shortcut icon" href="../img/logo/favicon.ico"/>
+    <link rel="bookmark" href="../img/logo/favicon.ico"/>
+
 </head>
 
 <body>
